--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-i18next": "^16.3.3",
     "react-resizable-panels": "^3.0.6",
     "react-router-dom": "^7.9.6",
